# dns_resolver

./: CMakeLists.txt  Doxyfile  README.md
examples/: CMakeLists.txt  main.cpp
examples/client/: CMakeLists.txt  main.cpp
examples/resolver/: CMakeLists.txt  main.cpp
include/dns/: client.h  query.h  resolver.h
source/dns/: client.cpp  query.cpp  resolver.cpp
